src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    :root {
        --bg-translate-x: -20px;
        --bg-translate-y: -20px;
        --bg-opacity: 0.25;
    }

    .hero {
        background-color: rgb(0, 0, 0, var(--bg-opacity));
    }

    .hero::before {
        @apply fixed -z-50 translate-x-[var(--bg-translate-x)] translate-y-[var(--bg-translate-y)] bg-hero bg-cover bg-center blur-sm lg:bg-hero-lg;
        content: '';
        width: calc(100vw + 50px);
        width: calc(100lvw + 50px);
        height: calc(100vh + 50px);
        height: calc(100lvh + 50px);
    }

    .heroAD {
        background-color: rgb(0, 0, 0, var(--bg-opacity));
    }

    .heroAD::before {
        @apply fixed -z-50 translate-x-[var(--bg-translate-x)] translate-y-[var(--bg-translate-y)] bg-heroAD bg-cover bg-center lg:bg-heroAD ;
        content: '';
        width: calc(100vw + 50px);
        width: calc(100lvw + 50px);
        height: calc(100vh + 50px);
        height: calc(100lvh + 50px);
    }

    .crisp-edges {
        image-rendering: optimizeSpeed;
        image-rendering: -moz-crisp-edges;
        image-rendering: -o-crisp-edges;
        image-rendering: -webkit-optimize-contrast;
        image-rendering: pixelated;
        image-rendering: optimize-contrast;
        -ms-interpolation-mode: nearest-neighbor;
        -webkit-backface-visibility: hidden;
    }
}

